2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-style.c: (prepare_list):
	* appearance-themes.c: (theme_install_cb), (theme_delete_cb),
	(theme_details_changed_cb):
	* theme-installer.c: (cleanup_tmp_dir), (file_theme_type),
	(missing_utility_message_dialog), (transfer_done_tgz_tbz),
	(transfer_done_archive), (gnome_theme_install_real),
	(transfer_done_cb), (gnome_theme_install_from_uri),
	(gnome_theme_installer_run):
	* theme-installer.h: add initial support for installing themes,
	includes support for packages containing more than one theme
	(bug #409624)

2007-06-15  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_props_load_wallpaper),
	(wp_scale_type_changed), (wp_shade_type_changed):
	* gnome-wp-utils.c: (gnome_wp_pixbuf_tile): be extra careful when
	generating pixbufs (should mean we just get no thumbs instead of
	assertion failures, bug #403160)

2007-06-14  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* theme-util.c: (theme_delete), (theme_model_iter_last):
	* theme-util.h: new files

	* appearance.glade: default delete buttons to insensitive,
	change label for "Custom" key, adjust column ids for icon view

	* appearance-style.c: (style_init), (prepare_list),
	(update_color_buttons_from_settings), (theme_name_changed),
	(color_button_clicked_cb),
	(color_scheme_defaults_button_clicked_cb):
	* appearance-themes.c: (theme_get_selected_name),
	(theme_get_selected), (theme_select_iter), (theme_select_name),
	(theme_is_equal), (theme_set_custom_from_theme),
	(theme_changed_on_disk_cb), (theme_custom_cb), (theme_delete_cb),
	(theme_details_changed_cb), (theme_color_scheme_changed_cb),
	(theme_gconf_changed), (theme_postinit), (themes_init),
	(themes_shutdown):
	* appearance.h: improvements all around the block (metatheme
	deletion now working, and custom theme working much better)

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* appearance-style.c: (theme_name_changed):